<resources>
    <string name="app_name">Bima</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_companies">Companies</string>
    <string name="title_activity_agents">Agents</string>
    <string name="title_activity_valuers">Valuers</string>
    <string name="title_activity_brokers">Brokers</string>
    <string name="title_activity_premiums">Premiums</string>
    <string name="title_activity_claims">Claims</string>
    <string name="title_activity_subscriptions">Subscriptions</string>
    <string name="title_activity_myaccount">My Account</string>
    <string name="title_activity_trending">Trending</string>
    <string name="search">Search</string>
    <string name="content">Browse</string>
    <string name="payments">Payments</string>
    <string name="help"><![CDATA[Help & feedback]]></string>
    <string name="profile">My profile</string>
    <string name="sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
