<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:orderInCategory="200"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/content"
        android:orderInCategory="200"
        android:title="@string/content"
        android:icon="@drawable/ic_premiums"
        app:showAsAction="always" />

    <item
        android:id="@+id/payments"
        android:orderInCategory="100"
        android:title="@string/payments"
        app:showAsAction="never" />

    <item
        android:id="@+id/support"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />

</menu>
